force-app/main/default/objects/Campaign__c/fields/AmountAllOpportunities__c.field-meta.xml
<CustomField>
    <fullName>AmountAllOpportunities__c</fullName>
    <label>Value Opportunities in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>