force-app/main/default/objects/Campaign__c/fields/AmountWonOpportunities__c.field-meta.xml
<CustomField>
    <fullName>AmountWonOpportunities__c</fullName>
    <label>Value Won Opportunities in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>