force-app/main/default/objects/Campaign__c/fields/Campaign_Auto_Name_Override__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Auto_Name_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, this field stops the auto-naming workflow from firing.</description>
    <inlineHelpText>If TRUE, this field stops the auto-naming workflow from firing.</inlineHelpText>
    <label>Campaign Auto Name Override</label>
    <type>Checkbox</type>
</CustomField>