force-app/main/default/objects/Campaign__c/fields/Campaign_End_Date_Month_Text__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date_Month_Text__c</fullName>
    <description>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a numbered month.</description>
    <formula>IF( End_Date__c  &lt;&gt; null, 
CASE(
MONTH( Start_Date__c ),
1, &quot;1-Jan&quot;,
2, &quot;2-Feb&quot;,
3, &quot;3-Mar&quot;,
4, &quot;4-Apr&quot;,
5, &quot;5-May&quot;,
6, &quot;6-Jun&quot;,
7, &quot;7-Jul&quot;,
8, &quot;8-Aug&quot;,
9, &quot;9-Sept&quot;,
10, &quot;10-Oct&quot;,
11, &quot;11-Nov&quot;,
&quot;12-Dec&quot;
), 
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a numbered month.</inlineHelpText>
    <label>Campaign End Date Month (Text)</label>
    <type>Text</type>
</CustomField>