force-app/main/default/objects/Campaign__c/fields/Campaign_End_Date_Year_Text__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date_Year_Text__c</fullName>
    <description>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features column groupings.</description>
    <formula>IF( End_Date__c  &lt;&gt;null,TEXT(YEAR( Start_Date__c )),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features column groupings.</inlineHelpText>
    <label>Campaign End Date Year (Text)</label>
    <type>Text</type>
</CustomField>