force-app/main/default/objects/Campaign__c/fields/Campaign_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Line_of_Business__c</fullName>
    <description>Picklist describes the line of business this campaign is intended to engage.</description>
    <inlineHelpText>Picklist describes the line of business this campaign is intended to engage.</inlineHelpText>
    <label>Campaign Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefit Consultants</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Health Plans</fullName>
            </value>
            <value>
                <fullName>Health Systems</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>PBMS</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>