force-app/main/default/objects/Campaign__c/fields/Campaign_Objective__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Objective__c</fullName>
    <description>Main goal of the campiagn, lead generation, brand awareness</description>
    <inlineHelpText>A written description that explains the main purpose of the event, email, etc...</inlineHelpText>
    <label>Campaign Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand Awareness</fullName>
                <default>true</default>
                <label>Brand Awareness</label>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Relationship Development</fullName>
            </value>
            <value>
                <fullName>Thought Leadership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>