force-app/main/default/objects/Campaign__c/fields/Campaign_Start_Date_Month_Text__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date_Month_Text__c</fullName>
    <description>If the campaign start date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features grouping.</description>
    <formula>IF( Start_Date__c  &lt;&gt;null,TEXT(YEAR( Start_Date__c )),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the campaign start date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features column groupings.</inlineHelpText>
    <label>Campaign Start Date Month (Text)</label>
    <type>Text</type>
</CustomField>