force-app/main/default/objects/Campaign__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description>This field unpacks record type into &apos;Delivery Methods&apos; so that marketers can intuitively report on campaigns by delivery.</description>
    <inlineHelpText>This field unpacks record type into &apos;Delivery Methods&apos; so that marketers can intuitively report on campaigns by delivery.</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Campaign-No Delivery</fullName>
            </value>
            <value>
                <fullName>Email/Digital</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Sign-up</fullName>
            </value>
            <value>
                <fullName>Subscribe/Opt-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>