force-app/main/default/objects/Campaign__c/fields/Delivery_Method_Detail__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method_Detail__c</fullName>
    <description>Describes the method of delivery for out bound messaging and inbound data capture. This clarifies to the user how the campaign is intending on how to capture audience data.</description>
    <inlineHelpText>Describes the method of delivery for out bound messaging and inbound data capture. This clarifies to the user how the campaign is intending on how to capture audience data.</inlineHelpText>
    <label>Delivery Method Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Non-Pardot Form</fullName>
            </value>
            <value>
                <fullName>Non-Pardot Whitepaper</fullName>
            </value>
            <value>
                <fullName>Pardot Asset</fullName>
            </value>
            <value>
                <fullName>Pardot Email</fullName>
            </value>
            <value>
                <fullName>Pardot Form</fullName>
            </value>
            <value>
                <fullName>Pardot LandingPage</fullName>
            </value>
            <value>
                <fullName>Pardot URL</fullName>
            </value>
            <value>
                <fullName>Pardot Whitepaper</fullName>
            </value>
            <value>
                <fullName>Social Post</fullName>
            </value>
            <value>
                <fullName>Webinar RSVP Form</fullName>
            </value>
            <value>
                <fullName>Website RFI Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>