force-app/main/default/objects/Campaign__c/fields/ExpectedResponse__c.field-meta.xml
<CustomField>
    <fullName>ExpectedResponse__c</fullName>
    <label>Expected Response (%)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>