force-app/main/default/objects/Campaign__c/fields/HierarchyAmountAllOpportunities__c.field-meta.xml
<CustomField>
    <fullName>HierarchyAmountAllOpportunities__c</fullName>
    <label>Value Opportunities in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>