force-app/main/default/objects/Campaign__c/fields/HierarchyAmountWonOpportunities__c.field-meta.xml
<CustomField>
    <fullName>HierarchyAmountWonOpportunities__c</fullName>
    <label>Value Won Opportunities in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>