force-app/main/default/objects/Campaign__c/fields/HierarchyNumberOfContacts__c.field-meta.xml
<CustomField>
    <fullName>HierarchyNumberOfContacts__c</fullName>
    <label>Contacts in Hierarchy</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>