force-app/main/default/objects/Campaign__c/fields/HierarchyNumberOfOpportunities__c.field-meta.xml
<CustomField>
    <fullName>HierarchyNumberOfOpportunities__c</fullName>
    <label>Opportunities in Hierarchy</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>