force-app/main/default/objects/Campaign__c/fields/HierarchyNumberOfResponses__c.field-meta.xml
<CustomField>
    <fullName>HierarchyNumberOfResponses__c</fullName>
    <label>Responses in Hierarchy</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>