force-app/main/default/objects/Campaign__c/fields/HierarchyNumberOfWonOpportunities__c.field-meta.xml
<CustomField>
    <fullName>HierarchyNumberOfWonOpportunities__c</fullName>
    <label>Won Opportunities in Hierarchy</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>