force-app/main/default/objects/Campaign__c/fields/HierarchyNumberSent__c.field-meta.xml
<CustomField>
    <fullName>HierarchyNumberSent__c</fullName>
    <label>Num Sent in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>