force-app/main/default/objects/Campaign__c/fields/Is_Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Campaign__c</fullName>
    <formula>IF(RecordTypeId=&quot;0122f00000066gDAAQ&quot;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parent Campaign</label>
    <type>Checkbox</type>
</CustomField>