force-app/main/default/objects/Campaign__c/fields/Is_Template__c.field-meta.xml
<CustomField>
    <fullName>Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the campaign is being used as a template. Impacts auto-naming conventions.</description>
    <inlineHelpText>Indicates that the campaign is being used as a template. Impacts auto-naming conventions.</inlineHelpText>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>