force-app/main/default/objects/Campaign__c/fields/List_Segment_Audience__c.field-meta.xml
<CustomField>
    <fullName>List_Segment_Audience__c</fullName>
    <description>Text that describes the internal short-hand for the segmentation and/or audience that the campaign articulates.</description>
    <inlineHelpText>Text that describes the internal short-hand for the segmentation and/or audience that the campaign articulates.</inlineHelpText>
    <label>List Segment/Audience</label>
    <length>250</length>
    <type>Text</type>
</CustomField>