force-app/main/default/objects/Campaign__c/fields/NumberOfLeads__c.field-meta.xml
<CustomField>
    <fullName>NumberOfLeads__c</fullName>
    <label>Leads in Campaign</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>