force-app/main/default/objects/Campaign__c/fields/NumberOfOpportunities__c.field-meta.xml
<CustomField>
    <fullName>NumberOfOpportunities__c</fullName>
    <label>Opportunities in Campaign</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>