force-app/main/default/objects/Campaign__c/fields/NumberOfResponses__c.field-meta.xml
<CustomField>
    <fullName>NumberOfResponses__c</fullName>
    <label>Responses in Campaign</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>