force-app/main/default/objects/Campaign__c/fields/NumberOfWonOpportunities__c.field-meta.xml
<CustomField>
    <fullName>NumberOfWonOpportunities__c</fullName>
    <label>Won Opportunities in Campaign</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>