force-app/main/default/objects/Campaign__c/fields/NumberSent__c.field-meta.xml
<CustomField>
    <fullName>NumberSent__c</fullName>
    <label>Num Sent in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>