force-app/main/default/objects/Campaign__c/fields/Recommended_Pardot_Folder__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Pardot_Folder__c</fullName>
    <description>Text field that is populated with a recommended folder that should either be used and/or created if integrating this child campaign in integrating in Pardot</description>
    <inlineHelpText>Text field that is populated with a recommended folder that should either be used and/or created if integrating this child campaign in integrating in Pardot</inlineHelpText>
    <label>Recommended Pardot Folder</label>
    <length>250</length>
    <type>Text</type>
</CustomField>