force-app/main/default/objects/Campaign__c/fields/Recommended_Pardot_Tags__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Pardot_Tags__c</fullName>
    <description>Workflow populates this field with recommended tags that should be used when integrating with Pardot.</description>
    <inlineHelpText>Workflow populates this field with recommended tags that should be used when integrating with Pardot.</inlineHelpText>
    <label>Recommended Pardot Tags</label>
    <length>250</length>
    <type>Text</type>
</CustomField>