force-app/main/default/objects/Campaign__c/fields/Round_Sequence_of_Campaign_Communication__c.field-meta.xml
<CustomField>
    <fullName>Round_Sequence_of_Campaign_Communication__c</fullName>
    <label>Round/Sequence of Campaign Communication</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>