force-app/main/default/objects/Campaign__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>This is the internal name that will be used for the campaign. This will help support reporting and list view columns.</description>
    <inlineHelpText>This is the internal name that will be used for the campaign. This will help support reporting and list view columns.</inlineHelpText>
    <label>Short Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>