force-app/main/default/objects/Campaign__c/recordTypes/Direct_Mail_List.recordType-meta.xml
<RecordType>
    <fullName>Direct_Mail_List</fullName>
    <active>true</active>
    <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that will be engaged through direct mail delivery methods.</description>
    <label>Direct Mail List</label>
</RecordType>