force-app/main/default/objects/Campaign__c/recordTypes/Email_Digital_Delivery_List.recordType-meta.xml
<RecordType>
    <fullName>Email_Digital_Delivery_List</fullName>
    <active>true</active>
    <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that will be engaged through Email and/or digital delivery methods.</description>
    <label>Email/Digital Delivery List</label>
</RecordType>