force-app/main/default/objects/Campaign__c/recordTypes/Interest_Area_Product_Subscription_List.recordType-meta.xml
<RecordType>
    <fullName>Interest_Area_Product_Subscription_List</fullName>
    <active>true</active>
    <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that have opted into a list as a result of providing interest area data, product purchases, and/or by subscribing to campaigns.</description>
    <label>Interest Area/Product/Subscription List</label>
</RecordType>