force-app/main/default/objects/Campaign__c/recordTypes/Parent_Campaign_List.recordType-meta.xml
<RecordType>
    <fullName>Parent_Campaign_List</fullName>
    <active>true</active>
    <description>This is a record type that should be used for Marketing users who want to express up to 3 levels of campaign hierarchy, which facilities campaign rollups for reporting on ROI.</description>
    <label>Parent Campaign List</label>
</RecordType>