force-app/main/default/objects/Campaign__c/recordTypes/Sign_up_List.recordType-meta.xml
<RecordType>
    <fullName>Sign_up_List</fullName>
    <active>true</active>
    <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that have taken an action to sign-up for something. This should be used for event RSVPs, Webinar sign-ups, and RFI sign-ups, etc.</description>
    <label>Sign-up List</label>
</RecordType>