force-app/main/default/objects/Campaign__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>This is a record type that should be used for non-marketing users and non marketing campaigns</description>
    <label>Standard</label>
</RecordType>