force-app/main/default/objects/Campaign__c/recordTypes/Suppression_List.recordType-meta.xml
<RecordType>
    <fullName>Suppression_List</fullName>
    <active>true</active>
    <description>This is a record type that should be used for users to express Leads/Contacts that should be suppressed from other lists.</description>
    <label>Suppression List</label>
</RecordType>