force-app/main/default/objects/Campaign__c/validationRules/No_update_by_SalesTeam_member.validationRule-meta.xml
<ValidationRule>
    <fullName>No_update_by_SalesTeam_member</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Id == &apos;00eA00000019KCD&apos;</errorConditionFormula>
    <errorMessage>Campaign cannot be updated by Sales Team member. Please work with marketing to update the campaign.</errorMessage>
</ValidationRule>